--- a/src/app/entry/application-dashboard/application-dashboard.component.html
+++ b/src/app/entry/application-dashboard/application-dashboard.component.html
@@ -6,5 +6,8 @@
     <div>
         <h1>Welcome To Secure Finance</h1>
         <router-outlet></router-outlet>
+
+
     </div>
 </div>
+<app-footer></app-footer>
