--- a/src/app/entry/home-dashboard/home-dashboard.component.html
+++ b/src/app/entry/home-dashboard/home-dashboard.component.html
@@ -1,3 +1,5 @@
+<app-home-header></app-home-header>
+
 <div id="main">
 
     <div id="firstBox">
@@ -22,3 +24,5 @@
   
  </div> -->
 </div>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
