--- a/src/app/includes/enquiry/enquiry.component.html
+++ b/src/app/includes/enquiry/enquiry.component.html
@@ -48,7 +48,8 @@
 </div>
 </div> -->
 
-<div style="display: flex; justify-content: center; border-radius: 10px ; border-color: blue;background-color: rgba(203, 121, 12, 0.579);">
+<div style="display: flex; justify-content: center; border-radius: 10px ; border-color: blue;background: rgb(207,255,244);
+background: linear-gradient(90deg, rgba(207,255,244,1) 0%, rgba(11,9,150,1) 92%);">
     <div style="justify-content: center; display: flex;">
         <div style="display: flex; justify-content: center;margin-top: 10px;margin-bottom: 20px; border-radius: 10px ; border-color: blue;background-color: antiquewhite;">
 
