--- a/src/app/includes/enquiry/enquiry.component.html
+++ b/src/app/includes/enquiry/enquiry.component.html
@@ -1,112 +1,87 @@
-<!-- <p>enquiry works!</p> -->
-
-<div class="container-fluid"> <div class=" text-center mt-5 ">
-    <h2><b>Car Loan Enquiry Form</b></h2>
-</div>
-<!-- <form [formGroup]="enquiryForm" (ngSubmit)="onSubmit()"> -->
-<div class="row ">
-    <div class="col-lg-12 mx-auto">
-        <div class="card mt-2 mx-auto p-2 bg-dark">
-            <div class="card-body bg-light">
-                <div class="container">
-                    <form [formGroup]="enquiryForm" (ngSubmit)="onSubmit()">
-                        <div class="controls">
-                            <div class="row">
-
-                                <!-- <div class="col-md-6">
-                                    <div class="form-group"> <label  style="font-size: large;">Customer Id *</label> <input  type="number" formControlName="id" class="form-control" placeholder="Please Enter Customer Id *" required="required" data-error="Firstname is required."> </div>
-                                </div> -->
-
-                                <div class="col-md-6">
-                                    <div class="form-group"> <label  style="font-size: large;">Customer Name *</label> <input  type="text" formControlName="customerName" class="form-control" placeholder="Please Enter Customer Name *" required="required" data-error="Firstname is required."> </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group"> <label  style="font-size: large;">Pan Card No. *</label> <input  type="text" formControlName="pancardNumber" class="form-control" placeholder="Please Enter Customer PanCard No *" required="required" data-error="Lastname is required."> </div>
+<!-- <div style="justify-content: center; display: flex;">
+<div class="container">
+    <div class="row centered-form">
+    <div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                    <h3 class="panel-title">Please sign up for Bootsnipp <small>It's free!</small></h3>
+                     </div>
+                     <div class="panel-body">
+                    <form role="form">
+                        <div class="row">
+                            <div class="col-xs-6 col-sm-6 col-md-6">
+                                <div class="form-group">
+                        <input type="text" name="first_name" id="first_name" class="form-control input-sm" placeholder="First Name">
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="form-group"> <label  style="font-size: large;">Email Id *</label> <input  type="email" formControlName="customerEmailId" class="form-control" placeholder="Please Enter Customer Email *" required="required" data-error="Valid email is required."> </div>
+                            <div class="col-xs-6 col-sm-6 col-md-6">
+                                <div class="form-group">
+                                    <input type="text" name="last_name" id="last_name" class="form-control input-sm" placeholder="Last Name">
                                 </div>
-
-                                <div class="col-md-6">
-                                    <div class="form-group"> <label  style="font-size: large;">Mobile No *</label> <input  type="number" formControlName="customerMobileNumber" class="form-control" placeholder="Please Enter Customer Mobile No *" required="required" data-error="Valid email is required."> </div>
-                                </div>
-
-                                <div class="col-md-6">
-                                    <div class="form-group"> <label  style="font-size: large;">Alternate Mobile No *</label> <input  type="number" formControlName="customerAlternateMobileNumber" class="form-control" placeholder="Please Enter Customer Alternate Mobile No *" required="required" data-error="Valid email is required."> </div>
-                                </div>
-
-                                <div class="col-md-6">
-                                    <div class="form-group"> <label  style="font-size: large;">DOB *</label> <input  type="date" formControlName="customerDateOfBirth" class="form-control"  required="required" data-error="Valid email is required."> </div>
-                                </div>
-                                <!-- <div class="col-md-6">
-                                    <div class="form-group"> <label for="form_need" style="font-size: large;">Enquiry Status *</label> <input  type="text" formControlName="enquiryStatus" class="form-control"  required="required" data-error="Valid email is required."> </div>
-                                </div> -->
-
-                                <!-- <div class="col-md-6">
-                                    <div class="form-group"> <label for="form_need">Please specify your need *</label> <select id="form_need" name="need" class="form-control" required="required" data-error="Please specify your need.">
-                                            <option value="" selected disabled>--Select Your Issue--</option>
-                                            <option>Request Invoice for order</option>
-                                            <option>Request order status</option>
-                                            <option>Haven't received cashback yet</option>
-                                            <option>Other</option>
-                                        </select> </div>
-                                </div> -->
-
-                                
-
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <button class="btn btn-success" >Submit Enquiry</button>
-                                    <!-- <button class="btn btn-success">Submit Enquiry</button> -->
-                                </div>
-                                
-                                <!-- <div class="col-md-12"> <input type="submit" class="btn btn-success btn-send pt-2 btn-block " value="Generate Enquiry"> </div> -->
                             </div>
                         </div>
+
+                        <div class="form-group">
+                            <input type="email" name="email" id="email" class="form-control input-sm" placeholder="Email Address">
+                        </div>
+
+                        <div class="row">
+                            <div class="col-xs-6 col-sm-6 col-md-6">
+                                <div class="form-group">
+                                    <input type="password" name="password" id="password" class="form-control input-sm" placeholder="Password">
+                                </div>
+                            </div>
+                            <div class="col-xs-6 col-sm-6 col-md-6">
+                                <div class="form-group">
+                                    <input type="password" name="password_confirmation" id="password_confirmation" class="form-control input-sm" placeholder="Confirm Password">
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <input type="submit" value="Register" class="btn btn-info btn-block">
+                    
                     </form>
                 </div>
             </div>
-        </div> <!-- /.8 -->
-    </div> <!-- /.row-->
+        </div>
+    </div>
 </div>
-<!-- </form> -->
-</div>
-<div>
-    <label style="font-size: larger; color: green;"><b>{{isSubmited}}</b></label>
-</div>
-<<<<<<< Updated upstream
 </div> -->
 
 <div style="display: flex; justify-content: center; border-radius: 10px ; border-color: blue;background: rgb(207,255,244);
 background: linear-gradient(90deg, rgba(207,255,244,1) 0%, rgba(11,9,150,1) 92%);">
     <div style="justify-content: center; display: flex;">
         <div style="display: flex; justify-content: center;margin-top: 10px;margin-bottom: 20px; border-radius: 10px ; border-color: blue;background-color: antiquewhite;">
-=======
->>>>>>> Stashed changes
 
 
+            <form class="enquiry-form">
+                <pre></pre>
+                <mat-form-field>
+
+                    <mat-label>Name</mat-label>
+
+                    <input matInput placeholder="Your name">
+
+                </mat-form-field>
+                <pre></pre>
+                <mat-form-field>
+                    <mat-label>Email</mat-label>
+                    <pre></pre>
+                    <input matInput placeholder="Your email">
+                </mat-form-field>
+                <pre></pre>
+                <mat-form-field>
+                    <mat-label>Message</mat-label>
+                    <textarea matInput placeholder="Your message"></textarea>
+                </mat-form-field>
+                <pre></pre>
+                <button mat-raised-button color="primary">Send</button>
+            </form>
 
 
+        </div>
+        <div>
 
-
-
-
-
-<!-- <form [formGroup]="enquiryForm" (ngSubmit)="onSubmit()">
-    Id : <input type="text"  formControlName="id">
-   Name : <input type="text"  formControlName="customerName">
-   Pan No : <input type="text"  formControlName="pancardNumber">
-   Mobile No : <input type="text"  formControlName="customerMobileNumber">
-   Alernate Mobile No : <input type="text"  formControlName="customerAlternateMobileNumber">
-   Email : <input type="text"  formControlName="customerEmailId">
-   DOB : <input type="text"  formControlName="customerDateOfBirth">
-
-   <button>Submit</button>
-</form> -->
-
-
-
-
+        </div>
+    </div>
+</div>
