--- a/src/app/templates/menu/menu.component.html
+++ b/src/app/templates/menu/menu.component.html
@@ -1,7 +1,9 @@
 
+<div id="firstbox">
 <ul *ngFor="let menu of menus[0][type]">
     <!-- <li><button [routerLink]="type+'/'+menu.path">{{menu.label}}</button></li> -->
     <li><button mat-raised-button color="warn"[routerLink]="type+'/'+menu.path">{{menu.label}}</button></li>
     
 </ul>
 
+</div>
