--- a/src/app/templates/menu/menu.component.css
+++ b/src/app/templates/menu/menu.component.css
@@ -1,5 +1,10 @@
 button{
-    background-color: rgb(91, 177, 205);
-    border-radius: 50px;
+    background: rgb(207,255,244);
+    background: linear-gradient(90deg, rgba(207,255,244,1) 0%, rgba(11,9,150,1) 92%);
+    border-radius: 20px;
     padding: 5px 10px;
+}
+#firstbox{
+    background: rgb(207,255,244);
+    background: linear-gradient(90deg, rgba(207,255,244,1) 0%, rgba(11,9,150,1) 92%);
 }
