--- a/src/app/modules/operationalexecutive/checkcibil/checkcibil.component.html
+++ b/src/app/modules/operationalexecutive/checkcibil/checkcibil.component.html
@@ -1,1 +1,7 @@
-<p>checkcibil works!</p>
+<div class="cibil-container" style="margin-right: 20%;">
+    <h2>Your CIBIL Score</h2>
+    <p class="cibil-score">{{ cibilScore }}</p>
+    <p class="cibil-rating">{{ cibilRating }}</p>
+    <button (click)="generate()">Generate CIBIL</button>
+  </div>
+  
