--- a/src/app/entry/application-dashboard/application-dashboard.component.css
+++ b/src/app/entry/application-dashboard/application-dashboard.component.css
@@ -1,10 +1,13 @@
 .frame{
     display: flex;
     width: 100%;
+    background: rgb(207,255,244);
+  background: linear-gradient(90deg, rgba(207,255,244,1) 0%, rgba(11,9,150,1) 92%);
     
 }
 .menu{
     width: 200px;
-    background-color: aqua;
+    background: rgb(207,255,244);
+    background: linear-gradient(90deg, rgba(207,255,244,1) 0%, rgba(11,9,150,1) 92%);
     height: 350px;
 }
