--- a/src/app/templates/app-header/app-header.component.html
+++ b/src/app/templates/app-header/app-header.component.html
@@ -1,4 +1,9 @@
 <nav>
     <h1>{{getUserType |  usertype}}</h1>
+    <marquee behavior="right" direction="right">
+        <b>   <h2 align="center"
+            style="border: 20px;font-size: 35px;font-family: Georgia, 'Times New Roman', Times, serif;color: rgb(250, 21, 21)(211, 16, 16);">
+          Welcome to the Secure Finance </h2></b>
+    </marquee>
     <button mat-raised-button color="warn" routerLink="/">Logout</button>
 </nav>
