--- a/src/app/modules/relationshipexecutive/viewenquiry/viewenquiry.component.html
+++ b/src/app/modules/relationshipexecutive/viewenquiry/viewenquiry.component.html
@@ -1,1 +1,28 @@
-<p>viewenquiry works!</p>
+<table class="table" border="2">
+    
+    <tr>
+        <th scope="col">EnquiryId</th>
+        <th scope="col">Customer Name</th>
+        <th scope="col">Pan Card Number</th>
+        <th scope="col">Customer Mobile Number</th>
+        <th scope="col">Customer Alternate Mobile Number</th>
+        <th scope="col">Customer EmailId</th>
+        <th scope="col">Customer Date of Birth</th>
+        <th>CheckCibil</th>
+      
+    </tr>  
+    
+      <tr *ngFor="let p of enqq">
+        
+        <td>{{p.enquiryId}}</td>
+        <td>{{p.customerName}}</td>
+        <td>{{p.pancardNumber}}</td>
+        <td>{{p.customerMobileNumber}}</td>
+        <td>{{p.customerAlternateMobileNumber}}</td>
+        <td>{{p.customerEmailId}}</td>
+        <td>{{p.customerDateOfBirth}}</td>
+        <td><button>checkcibil</button></td>
+        
+      </tr>
+      
+  </table>
