--- a/src/app/modules/admin/add-employee/add-employee.component.html
+++ b/src/app/modules/admin/add-employee/add-employee.component.html
@@ -1,8 +1,8 @@
-<section class="vh-100" style="background-color: #eee;">
-    <div class="container h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
+<section class="vh-150" style="background-color: #eee;"style="width: 600px;">
+    <div class="container h-100" >
+      <div class="row d-flex justify-content-center align-items-center h-100" >
         <div class="col-lg-12 col-xl-11">
-          <div class="card text-black" style="border-radius: 25px;">
+          <div class="card text-black" style="border-radius: 55px; width:800px; margin-left: 100px;">
             <div class="card-body p-md-5">
               <div class="row justify-content-center">
                 <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
@@ -11,7 +11,7 @@
   
                     <div class="d-flex flex-row align-items-center mb-4">
                       <div class="form-outline flex-fill mb-0">
-                        <input type="text" id="form3Example1c" class="form-control" placeholder="Enter Your Name"/>
+                        <input type="text" id="form3Example1c" formControlName="employeeName" placeholder="Enter Your Name"/>
                        
                       </div>
                     </div>
@@ -19,14 +19,14 @@
                     <div class="d-flex flex-row align-items-center mb-4">
                     
                       <div class="form-outline flex-fill mb-0">
-                        <input type="text" id="form3Example3c" class="form-control" placeholder="Enter Your EmailId"/>
+                        <input type="text" id="form3Example3c" formControlName="areaName" placeholder="Enter Your AreaName"/>
                      
                       </div>
                     </div>
   
                     <div class="d-flex flex-row align-items-center mb-4">
                       <div class="form-outline flex-fill mb-0">
-                        <input type="number" id="form3Example4c" class="form-control" placeholder="Enter Your Mobile No"/>
+                        <input type="text" id="form3Example4c" formControlName="cityName" placeholder="Enter Your City Name"/>
                       
                       </div>
                     </div>
@@ -34,28 +34,67 @@
                     
                     <div class="d-flex flex-row align-items-center mb-4">
                         <div class="form-outline flex-fill mb-0">
-                          <input type="text" id="form3Example4c" class="form-control" placeholder="Enter Your Address"/>
+                          <input type="text" id="form3Example4c" formControlName="districtName" placeholder="Enter Your District Name"/>
                         
                         </div>
                       </div>
   
                     <div class="d-flex flex-row align-items-center mb-4">
                       <div class="form-outline flex-fill mb-0">
-                        <input type="text" id="form3Example4cd" class="form-control" placeholder="Enter Your Designation" />
+                        <input type="text" id="form3Example4cd" formControlName="landMark" placeholder="Enter Your Landmark" />
                        
                       </div>
                     </div>
-                    <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                      <button type="button" class="btn btn-primary btn-lg">Register</button>
-                    </div>
-  
+                   
                   </form>
   
                 </div>
                 <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
   
-                  <img src="https://th.bing.com/th/id/OIP.IO4lenjx1gSb9-zViH2L8QHaD4?pid=ImgDet&rs=1"
-                    class="img-fluid" alt="Sample image">
+                    <form class="mx-1 mx-md-4">
+  
+                        <div class="d-flex flex-row align-items-center mb-4">
+                          <div class="form-outline flex-fill mb-0">
+                            <input type="text" id="form3Example1c" formControlName="stateName" placeholder="Enter Your StateName"/>
+                           
+                          </div>
+                        </div>
+      
+                        <div class="d-flex flex-row align-items-center mb-4">
+                        
+                          <div class="form-outline flex-fill mb-0">
+                            <input type="number" id="form3Example3c" formControlName="pinCode" placeholder="Enter Your PinCode"/>
+                         
+                          </div>
+                        </div>
+      
+                        <div class="d-flex flex-row align-items-center mb-4">
+                          <div class="form-outline flex-fill mb-0">
+                            <input type="number" id="form3Example4c" formControlName="employeeMobileNo" placeholder="Enter Your Mobile No"/>
+                          
+                          </div>
+                        </div>
+    
+                        
+                        <div class="d-flex flex-row align-items-center mb-4">
+                            <div class="form-outline flex-fill mb-0">
+                              <input type="text" id="form3Example4c" formControlName="employeeEmail" placeholder="Enter Your EmailId"/>
+                            
+                            </div>
+                          </div>
+
+                          <div class="d-flex flex-row align-items-center mb-4">
+                            <div class="form-outline flex-fill mb-0">
+                              <input type="text" id="form3Example4c" formControlName="employeeDesignation" placeholder="Enter Your Designation"/>
+                            
+                            </div>
+                          </div>
+                      
+                        <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                            <button type="button" class="btn btn-primary btn-lg">Register</button>
+                          </div>
+        
+                      </form>
   
                 </div>
               </div>
