--- a/src/app/templates/home-header/home-header.component.html
+++ b/src/app/templates/home-header/home-header.component.html
@@ -11,7 +11,7 @@
      <a mat-button color="primary" routerLink="emi">EMI Calculator</a>
      <a mat-button color="primary" routerLink="enquiry">Enquiry</a>
      <a mat-button color="primary" routerLink="login">Login</a>
-     <a mat-button color="primary"> Locate Us <mat-icon> place</mat-icon></a>
+     <a mat-button color="primary" routerLink="locate"> Locate Us <mat-icon> place</mat-icon></a>
     
    </mat-toolbar>
    
