--- a/src/app/entry/application-dashboard/application-dashboard.component.html
+++ b/src/app/entry/application-dashboard/application-dashboard.component.html
@@ -3,7 +3,7 @@
     <div class="menu">
         <app-menu></app-menu>
     </div>
-    <div>
+    <div class="routeroutlet">
         
         <router-outlet></router-outlet>
         
