--- a/src/app/includes/locate/locate.component.html
+++ b/src/app/includes/locate/locate.component.html
@@ -1,6 +1,7 @@
 
-<div align='center'>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d30269.93950807452!2d73.80754689999999!3d18.49532225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1682491520269!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<div align='center' style=" background: rgb(207,255,244);
+background: linear-gradient(90deg, rgba(207,255,244,1) 0%, rgba(11,9,150,1) 92%);">
+    <iframe id="abc" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3783.9107851507815!2d73.81122917519087!3d18.487699882599447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2bf3b4aaac9e5%3A0xc340aaa348936901!2sBitLogicSystem!5e0!3m2!1sen!2sin!4v1696506526612!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 
     
