--- a/src/app/modules/operationalexecutive/checkcibil/checkcibil.component.html
+++ b/src/app/modules/operationalexecutive/checkcibil/checkcibil.component.html
@@ -1,7 +1,52 @@
-<div class="cibil-container" style="margin-right: 20%;">
-    <h2>Your CIBIL Score</h2>
-    <p class="cibil-score">{{ cibilScore }}</p>
-    <p class="cibil-rating">{{ cibilRating }}</p>
-    <button (click)="generate()">Generate CIBIL</button>
+
+<div class="modal" id="myModal" >
+   
+  <div class="loan-calculator" >
+      <div class="top">
+          
+          <div id="xBut">
+              <button type="button"  id="Xbut" data-bs-dismiss="modal" style="margin-left: 250px;" (click)="Closedmodel()">X</button>
+         
+          </div>
+          
+          <h2 align="center" style="color: #ae434a;font-size: 30px;font-weight: 900;">Check Your Credit Score Here</h2>
+          <br>
+          <form [formGroup]="emiForm" >
+              <div class="group">
+                  <div class="title" style="color: #aa141d;">Pan Number</div>
+                  <input id="inputBox" type="text" placeholder="ex: XXXX0000X" class="loan-amount" formControlName="panNumber"/>
+              </div>
+
+              <div class="group">
+                  <div class="title" style="color: #aa141d;">Enter Name</div>
+                  <input id="inputBox"  type="text" placeholder="Enter Name" class="interest-rate" formControlName="interest" />
+              </div>
+
+              <div class="group">
+                  <div class="title" style="color: #aa141d;">Date Of Birth</div>
+                  <input id="inputBox"  type="date" placeholder="Enter date" class="loan-tenure"  formControlName="tenure"/>
+              </div>
+          </form>
+      </div>
+
+      <div class="result">
+          <div class="left">
+              <div class="loan-emi">
+                  <h3>Your Credit Score</h3>
+                  <div class="value">{{cibil}}</div>
+              </div>
+
+            
+              <button class="calculate-btn" (click)="  generateCibil()" style="margin-left: 300px;">Get Your CIBIL</button>
+               </div>
+         
+      </div>
   </div>
-  
+
+
+
+     </div>
+ 
+
+
+<router-outlet></router-outlet> 
